<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PiFire</string>
    <string name="nav_app_title_one">Pi</string>
    <string name="nav_app_title_two">Fire\u00A0</string>
    <string name="action_item_selected">%1$s Selected</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_pellet_manager">Pellets</string>
    <string name="menu_events">Events</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_info">Info</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_pellet_manager">Pellet Manager</string>
    <string name="nav_events">Event Log</string>
    <string name="nav_admin">Admin</string>
    <string name="nav_changelog">Changelog</string>
    <string name="placeholder_img">placeholder_img</string>
    <string name="placeholder_temp">0°</string>
    <string name="placeholder_percentage">0%</string>
    <string name="placeholder_time">00:00</string>
    <string name="placeholder_mode">Off</string>
    <string name="placeholder_none">--</string>
    <string name="placeholder_number">Number</string>
    <string name="placeholder_text_view">TextView</string>
    <string name="placeholder_string">This is a very long text and we need to show 3…(dots)</string>
    <string name="json_parsing_error">JSON Parsing Error - %1$s not updated</string>
    <string name="disabled_option_settings">Feature disabled. Requires PiFire version %1$s or higher</string>
    <string name="disabled_option_dialog_title">Disabled Feature</string>
    <string name="disabled_option_dialog_message">This feature is disabled and PiFire version %1$s or higher is required. Please upgrade to a newer version to use this function.</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="colon">:</string>
    <string name="confirm">Confirm</string>
    <string name="clear">Clear</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="view_all">View All</string>
    <string name="enabled">Enabled</string>
    <string name="search">Search</string>
    <string name="undo">Undo</string>
    <string name="swipe_to_start">Swipe to start</string>
    <string name="disable_button">Disable</string>
    <string name="update_button">Update</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="open_button">Open</string>
    <string name="downloading">Downloading</string>
    <string name="http_scheme">http://</string>
    <string name="https_scheme">https://</string>
    <string name="scheme">Scheme</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome</string>
    <string name="terms">Terms</string>
    <string name="edit">Edit</string>
    <string name="status">Status</string>
    <string name="reset">Reset</string>
    <string name="reboot">Reboot</string>
    <string name="restart">Restart</string>
    <string name="shutdown">Shutdown</string>
    <string name="options">Options</string>
    <string name="offline">Offline</string>
    <string name="sure">Sure</string>
    <string name="no_thanks">No Thanks</string>
    <string name="exit">Exit</string>
    <string name="add_new">Add New</string>
    <string name="text_blank_error">Cannot be blank!</string>
    <string name="grill_mode_start">Start</string>
    <string name="grill_mode_monitor">Monitor</string>
    <string name="grill_mode_stop">Stop</string>
    <string name="grill_mode_smoke">Smoke</string>
    <string name="grill_mode_hold">Hold</string>
    <string name="grill_mode_shutdown">Shutdown</string>
    <string name="grill_mode_prime">Prime</string>
    <string name="grill_state_mode">Mode</string>
    <string name="dash_grill_title">Grill</string>
    <string name="grill_state_current">Current</string>
    <string name="grill_state_target">Target</string>
    <string name="grill_state_set">Set</string>
    <string name="dash_probe_one_title">Probe 1</string>
    <string name="dash_probe_two_title">Probe 2</string>
    <string name="dash_timer_title">Timer</string>
    <string name="dash_pellets_title">Pellets</string>
    <string name="dash_remaining_title">Remaining</string>
    <string name="grill_smoke_plus">Smoke Plus</string>
    <string name="grill_smoke_plus_abv">S Plus</string>
    <string name="dash_pwm_control">PWM</string>
    <string name="grill_shutdown_temp">Shutdown Grill When Temp Achieved</string>
    <string name="grill_keep_warm_temp">Keep Warm When Temp Achieved</string>
    <string name="grill_shutdown_timer">Shutdown Grill When Timer Expires</string>
    <string name="grill_keep_warm_timer">Keep Warm When Timer Expires</string>
    <string name="timer_start">Start</string>
    <string name="timer_pause">Pause</string>
    <string name="timer_stop">Stop</string>
    <string name="dialog_prime_startup">Startup Grill After Priming</string>
    <string name="dialog_confirm_action">Confirm Action</string>
    <string name="dialog_event">Event Info</string>
    <string name="dialog_probe_edit">Probe Edit</string>
    <string name="dialog_probe_name">Probe Name</string>
    <string name="dialog_probe_profile">Probe Profile</string>
    <string name="dialog_max_error">Must be less than %1$s characters</string>
    <string name="dialog_unsupported_server_version_title">Unsupported Version</string>
    <string name="dialog_unsupported_server_min_message">Your current PiFire version is unsupported please update PiFire to the minimum version of %1$s build %2$s</string>
    <string name="dialog_unsupported_server_max_message">Your current PiFire version is unsupported by this app. The maximum PiFire version supported is %1$s build %2$s. Please check for an update to this application</string>
    <string name="settings_error_offline">Currently Offline - Settings cannot be changed</string>
    <string name="control_not_connected">No Connection to PiFire - Currently Offline</string>
    <string name="control_smoke_plus_disabled">Only available in Hold and Smoke modes</string>
    <string name="control_pwm_control_disabled">Only available in Hold mode</string>
    <string name="control_manual_mode">Manual mode must be controlled from Admin Settings</string>
    <string name="changelog_title">What\'s New</string>
    <string name="setup_connect">Connect</string>
    <string name="setup_push">Consent</string>
    <string name="setup_finish">Finish</string>
    <string name="setup_server_address">Server Address</string>
    <string name="setup_invalid_url">Address is invalid!</string>
    <string name="setup_invalid_url_alert">Address is invalid! Please try again</string>
    <string name="setup_blank_url">Address cannot blank!</string>
    <string name="setup_cannot_connect">Cannot connect to PiFire. Verify entered address and that grill is powered on</string>
    <string name="setup_error">There was an error please try again</string>
    <string name="setup_with_qr_code_text">You can generate a QR code by holding the down button on the grill\'s display or from the Admin menu in a browser</string>
    <string name="setup_enter_address">Enter PiFire Address</string>
    <string name="setup_enter_address_text">Enter your PiFire server address. You should set this to be a static IP address or set it up to be a resolvable DNS address</string>
    <string name="setup_finish_title">Setup Complete</string>
    <string name="setup_finish_text">Connection to your PiFire server is now complete. If you need to change the connection settings you can find them in the app settings</string>
    <string name="setup_scan_qr">Scan QR Code</string>
    <string name="setup_server_connect_error">Failed to connect. HTTP Code: %1$s - Message: %2$s</string>
    <string name="setup_server_auth_required">Authentication Required</string>
    <string name="setup_server_self_signed_title">Certificate Error</string>
    <string name="setup_server_self_signed">This application will trust self signed certificates that are imported to Android credential storage. Please verify your certificate is imported or the application will fail to connect. If you are using a trusted certificate please check your server for other ssl issues</string>
    <string name="setup_push_consent_title">OneSignal Data Privacy</string>
    <string name="setup_push_consent_toggle">Allow OneSignal to send push notifications</string>
    <string name="setup_push_dialog_declined_title">Skip Consent</string>
    <string name="setup_push_dialog_declined_message">You will need to consent to the OneSignal data privacy later if you wish to have PiFire Android receive push notifications</string>
    <string name="setup_begin_terms_title">Terms of Use</string>
    <string name="setup_begin_terms">The creator of this project takes no responsibility for any damage that you may do to yourself or your personal property. The creator also takes no responsibility for any resulting harm or damages that may come from issues with the hardware or software design.</string>
    <string name="setup_settings_error">Failed to retrieve settings from Server. Please check your connection and verify your server version is compatible</string>
    <string name="settings_server">Server Settings</string>
    <string name="settings_app">App Settings</string>
    <string name="settings_probe">Probe Settings</string>
    <string name="settings_grill_name">Grill Name</string>
    <string name="settings_work">Work Mode</string>
    <string name="settings_pwm">PWM Settings</string>
    <string name="settings_timers">Startup &amp; Shutdown</string>
    <string name="settings_safety">Safety Settings</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_admin">Admin Settings</string>
    <string name="settings_pellets">Pellet Settings</string>
    <string name="settings_manual">Manual Mode</string>
    <string name="settings_info">Info:</string>
    <string name="settings_note">Note:</string>
    <string name="settings_warning">Warning:</string>
    <string name="settings_danger">Danger:</string>
    <string name="settings_min_error">Value must be greater than %1$s</string>
    <string name="settings_max_error">Value must be less than %1$s</string>
    <string name="settings_action_success">Action completed successfully</string>
    <string name="settings_server_settings_title">Server Settings</string>
    <string name="settings_server_settings_summary">Setup server address and basic auth</string>
    <string name="settings_cat_updates">Update Checking</string>
    <string name="settings_update_check_now">Check Now</string>
    <string name="settings_update_check_now_summary">Check for updates now</string>
    <string name="settings_cat_crash">Crash Reporting</string>
    <string name="settings_enable_crash">Enable</string>
    <string name="settings_enable_crash_disabled">Sentry DSN is not set. Option is disabled</string>
    <string name="settings_crash_dialog_title">Crash Dialogs</string>
    <string name="settings_crash_dialog_summary">Show feedback dialog after a crash</string>
    <string name="settings_crash_summary">If the application crashes this will send a report to the developer</string>
    <string name="settings_dev_crash_title">Debug Crash</string>
    <string name="settings_dev_crash_summary">Send crash reports to Sentry in debug build</string>
    <string name="info_wifi_info">Server Wifi Info</string>
    <string name="info_wifi_link">Wifi Link Quality</string>
    <string name="info_wifi_quality">Wifi Quality Percentage</string>
    <string name="info_cpu_info">CPU Status/Health</string>
    <string name="info_cpu_temp">CPU Temperature</string>
    <string name="info_cpu_throttled">CPU Throttled</string>
    <string name="info_cpu_voltage">CPU Under-voltage</string>
</resources>