<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="false"
    app:contentPadding="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cpu_info_inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.weberbox.pifire.ui.views.CardViewHeaderButton
            android:id="@+id/cpu_info_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:header_icon="@drawable/ic_info_cpu"
            app:header_title="@string/info_cpu_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.skydoves.androidveil.VeilLayout
            android:id="@+id/cpu_veil_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpu_info_header"
            app:veilLayout_baseAlpha="0.6"
            app:veilLayout_baseColor="@color/colorLighterGrey"
            app:veilLayout_highlightAlpha="1.0"
            app:veilLayout_highlightColor="@color/colorPlaceholder"
            app:veilLayout_radius="18dp"
            app:veilLayout_shimmerEnable="true"
            app:veilLayout_veiled="true">

            <LinearLayout
                android:id="@+id/cpu_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text15AllerBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:layout_marginEnd="@dimen/default_spacing"
                    android:layout_marginBottom="@dimen/small_spacing"
                    android:text="@string/info_cpu_temp"
                    app:autoSizeTextType="uniform" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cpu_temp_text"
                    style="@style/Text15AllerBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:layout_marginEnd="@dimen/default_spacing"
                    android:minWidth="120dp"
                    android:textStyle="normal"
                    app:autoSizeTextType="uniform" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text15AllerBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:layout_marginEnd="@dimen/default_spacing"
                    android:layout_marginBottom="@dimen/small_spacing"
                    android:text="@string/info_cpu_throttled"
                    app:autoSizeTextType="uniform" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cpu_throttled_text"
                    style="@style/Text15AllerBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:layout_marginEnd="@dimen/default_spacing"
                    android:minWidth="120dp"
                    android:textStyle="normal"
                    app:autoSizeTextType="uniform" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Text15AllerBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:layout_marginTop="@dimen/default_spacing"
                    android:layout_marginEnd="@dimen/default_spacing"
                    android:layout_marginBottom="@dimen/small_spacing"
                    android:text="@string/info_cpu_voltage"
                    app:autoSizeTextType="uniform" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/cpu_voltage_text"
                    style="@style/Text15AllerBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_spacing"
                    android:layout_marginEnd="@dimen/default_spacing"
                    android:layout_marginBottom="@dimen/small_spacing"
                    android:minWidth="120dp"
                    android:textStyle="normal"
                    app:autoSizeTextType="uniform" />

            </LinearLayout>
        </com.skydoves.androidveil.VeilLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>